--- a/pom.xml
+++ b/pom.xml
@@ -87,6 +87,8 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
+				 <source>${java.version}</source>
+                 <target>${java.version}</target>
 					<excludes>
 						<exclude>
 							<groupId>org.projectlombok</groupId>
